force-app/main/default/objects/Budget_Position__c/Budget_Position__c.object-meta.xml
<CustomObject>
    <description>monthly budget by account and item</description>
    <label>Budget Position</label>
    <nameField>
        <displayFormat>Bud-Pos {0}</displayFormat>
        <label>Budget Position-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>