force-app/main/default/objects/Budget_Position__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Budget Positions</relationshipLabel>
    <relationshipName>Budget_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>