force-app/main/default/objects/Budget_Position__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <description>Name of fiscal period</description>
    <label>Fiscal Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Period 1 - January</fullName>
            </value>
            <value>
                <fullName>Period 2 - February</fullName>
            </value>
            <value>
                <fullName>Period 3 - March</fullName>
            </value>
            <value>
                <fullName>Period 4 - April</fullName>
            </value>
            <value>
                <fullName>Period 5 - May</fullName>
            </value>
            <value>
                <fullName>Period 6 - June</fullName>
            </value>
            <value>
                <fullName>Period 7 - July</fullName>
            </value>
            <value>
                <fullName>Period 8 - August</fullName>
            </value>
            <value>
                <fullName>Period 9 - September</fullName>
            </value>
            <value>
                <fullName>Period 10 - October</fullName>
            </value>
            <value>
                <fullName>Period 11 - November</fullName>
            </value>
            <value>
                <fullName>Period 12 - December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>