force-app/main/default/objects/Budget_Position__c/fields/Help_YTD__c.field-meta.xml
<CustomField>
    <fullName>Help_YTD__c</fullName>
    <formula>IF( TODAY() &gt;=  DATE( YEAR(TODAY()) , CASE(Fiscal_Period__c,
&quot;Period 10 - October&quot;, 10,
&quot;Period 11 - November&quot;, 11,
&quot;Period 12 - December&quot;, 12,
VALUE( RIGHT( LEFT( TEXT( Fiscal_Period__c ) , 8) ,1) )
)  ,1) ,&quot;yes&quot; , &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help YTD</label>
    <type>Text</type>
</CustomField>