force-app/main/default/objects/Budget_Position__c/fields/Optimum_Qty__c.field-meta.xml
<CustomField>
    <fullName>Optimum_Qty__c</fullName>
    <label>Optimum Qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>