force-app/main/default/objects/Budget_Position__c/fields/Optimum_Sales__c.field-meta.xml
<CustomField>
    <fullName>Optimum_Sales__c</fullName>
    <formula>Optimum_Qty__c  *  Budget__r.Price_pcs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optimum Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>