force-app/main/default/objects/Budget_Position__c/fields/Optimum_Sales_in_CHF_at_const_exch_rate__c.field-meta.xml
<CustomField>
    <fullName>Optimum_Sales_in_CHF_at_const_exch_rate__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&quot;EUR&quot;, $Setup.Constant_Exchange_Rates__c.EUR2CHF__c ,
&quot;JPY&quot;, $Setup.Constant_Exchange_Rates__c.JPY2CHF__c ,
&quot;USD&quot;, $Setup.Constant_Exchange_Rates__c.USD2CHF__c ,
1.00) *  Optimum_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optimum Sales in CHF at const exch rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>