force-app/main/default/objects/Budget_Position__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>text(Budget__r.Product__r.Product_Category__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>