force-app/main/default/objects/Budget_Position__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <formula>text(Budget__r.Product__r.Product_Center__c)</formula>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>