force-app/main/default/objects/Budget_Position__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <formula>Qty__c *  Budget__r.Price_pcs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>