force-app/main/default/objects/Budget_Position__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <formula>DATE(
 VALUE(   RIGHT( TEXT( Budget__r.Budget_Year__c ) , 4) ),
CASE(Fiscal_Period__c,
&quot;Period 10 - October&quot;, 10,
&quot;Period 11 - November&quot;, 11,
&quot;Period 12 - December&quot;, 12,
 VALUE(  RIGHT( LEFT( TEXT( Fiscal_Period__c ) , 8) ,1) )
) , 
15)</formula>
    <label>Schedule</label>
    <type>Date</type>
</CustomField>